# translate-dub

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  TRANSLATEGEMMA_SETUP.md  VIBEVOICE_SETUP.md  main.py  pyproject.cuda.toml  pyproject.mac.toml  pyproject.toml  run_pipeline.py  setup-mac.sh  test_icl_voice_clone.py
.agent/workflows/: cloud-gpu.md
data/longform_audio/french_conversation_example_speaker_clips/: clips_metadata.json  clips_metadata_combined.json  french_conversation_example.json  french_conversation_example_en.json
docker/: Dockerfile.cuda
docs/: translategemma_translation.md  vibevoice_asr.md
examples/: asr_translation_example.py
notebooks/: synthesize_dub_colab.ipynb
pipeline/: __init__.py  asr.py  device.py  dubbing_pipeline.py  language_utils.py  separation.py  translation.py  tts.py
pipeline_mlx/: __init__.py  asr.py  dubbing_pipeline.py  language_utils.py  translation.py  tts.py
reference_papers/: real-time-speech-to-speech-translation.md  speaker-diarization.md
scripts/: cloud-setup.sh  docker-run.sh  start_translategemma_server.sh  start_vibevoice_server.sh
tools/: compare_separators.py  debug_token_generation.py  extract_speaker_clips.py  recombine_separation.py  synthesize_dub.py  synthesize_dub_torch.py  test_asr.py  test_csm_dub.py  test_problematic_segment.py  test_speaker0_combined.py  test_translation.py  test_tts_timeout.py  test_vibevoice.py  test_vibevoice_range.py  transcribe.py  translate_transcript.py
