[project]
name = "translate-dub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchaudio",
    # Qwen3-TTS dependencies
    "transformers==4.57.3",
    "accelerate==1.12.0",
    "gradio",
    "librosa",
    "soundfile",
    "sox",
    "onnxruntime",
    "einops",
    # Local Qwen3-TTS package
    "qwen-tts",
    # ASR - faster-whisper with CTranslate2 for fast CPU inference (ROCm has issues with Whisper on RDNA3)
    "faster-whisper",
]

[tool.uv]
conflicts = [[
    { package = "torch", extra = "rocm" },
    { package = "torch", extra = "cuda" },
]]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }
qwen-tts = { path = "Qwen3-TTS", editable = true }
